--- a/src/components/Cursor/CustomCursor.css
+++ b/src/components/Cursor/CustomCursor.css
@@ -1,10 +1,10 @@
 .custom-cursor {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 40px;
     height: 40px;
-    border: 2px solid white;
+    border: 2px solid #f1f1f1;
     border-radius: 50%;
     transform: translate(-50%, -50%);
     pointer-events: none;
