--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@
 body {
   color: #f1f1f1;
   background-color: #0a0a0a;
-  background-image: radial-gradient(circle at 30% 30%, #121212, #0a0a0a);
+  background-image: radial-gradient(circle at 30% 30%, #1d1d1d, #0a0a0a);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
