--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,23 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #424242;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 0px;
+}
+.overflow-x-auto::-webkit-scrollbar {
+  display: none;
 }
 
 
